Fixed: Small correction in German locale Fixed: Toolbar not visible in fullscreen mode Added: Show toolbar on hover

--- a/chrome/skin/browser-overlay.css
+++ b/chrome/skin/browser-overlay.css
@@ -6,4 +6,8 @@ toolbar[iconsize="small"] #hidebookmarksbarButton
 {
 	list-style-image:url(toolbar.png);
 }
+#navigator-toolbox[bookmarksbarHover="true"] #PersonalToolbar
+{
+	visibility:visible;
+}
 
